--- a/about.css
+++ b/about.css
@@ -1,3 +1,10 @@
+.item9 {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgb(255, 255, 255); /* Ensures it has a background */
+}
 
 
 
