--- a/about.css
+++ b/about.css
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: rgb(45, 5, 256); /* Ensures it has a background */
+ 
 }
 
 
@@ -112,6 +112,7 @@
     grid-gap: 0px;
     background-color: rgb(255, 255, 255);
     padding-top: 50px;
+      min-height: 100vh; /* Ensure the container fills the viewport height */
   }
   
   
@@ -154,6 +155,7 @@
     grid-gap: 0px;
     background-color: rgb(255, 255, 255);
     padding-top: 30px;
+      min-height: 100vh; /* Ensure the container fills the viewport height */
   }
   
   
@@ -255,6 +257,7 @@
     grid-gap: 0px;
     background-color: rgb(255, 255, 255);
     padding-top: 40px;
+      min-height: 100vh; /* Ensure the container fills the viewport height */
   }
   
   
@@ -337,6 +340,7 @@
   background-color: rgb(255, 255, 255);
   padding-left: 8%;
   padding-right: 8%;
+    min-height: 100vh; /* Ensure the container fills the viewport height */
 }
 
   .grid-container3 > div {
